chapter05/kubia-svc-headless-discoverall.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
