chapter05/kubia-ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http: 
      paths: /
      backend:
        serviceName: kubia-nodeport
        servicePort: 80
